feat: save results

--- a/macd strategy/macd-march-2024-by-ticker.ipynb
+++ b/macd strategy/macd-march-2024-by-ticker.ipynb
@@ -1598,14 +1598,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 285,
+   "execution_count": 300,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/mb/tyl8xvh9689bgk14qr31lc7r0000gn/T/ipykernel_9219/271852912.py:2: UserWarning: Superimposed OHLC plot matches the original plot. Skipping.\n",
+      "/var/folders/mb/tyl8xvh9689bgk14qr31lc7r0000gn/T/ipykernel_9219/69321050.py:2: UserWarning: Superimposed OHLC plot matches the original plot. Skipping.\n",
       "  bt.plot()\n"
      ]
     },
@@ -1615,51 +1615,51 @@
        "Start                     2021-06-07 09:30:00\n",
        "End                       2024-03-25 13:30:00\n",
        "Duration                   1022 days 04:00:00\n",
-       "Exposure Time [%]                   72.718032\n",
-       "Equity Final [$]                193444.287299\n",
-       "Equity Peak [$]                 194671.731147\n",
-       "Return [%]                          93.444287\n",
+       "Exposure Time [%]                   61.740191\n",
+       "Equity Final [$]                429122.867758\n",
+       "Equity Peak [$]                  436452.46102\n",
+       "Return [%]                         329.122868\n",
        "Buy & Hold Return [%]               23.857585\n",
-       "Return (Ann.) [%]                   26.598481\n",
-       "Volatility (Ann.) [%]               25.268839\n",
-       "Sharpe Ratio                          1.05262\n",
-       "Sortino Ratio                        2.130978\n",
-       "Calmar Ratio                           1.2952\n",
-       "Max. Drawdown [%]                  -20.536201\n",
-       "Avg. Drawdown [%]                   -1.829845\n",
-       "Max. Drawdown Duration      230 days 19:00:00\n",
-       "Avg. Drawdown Duration       12 days 06:00:00\n",
-       "# Trades                                  134\n",
-       "Win Rate [%]                        47.014925\n",
+       "Return (Ann.) [%]                   68.311696\n",
+       "Volatility (Ann.) [%]               84.231752\n",
+       "Sharpe Ratio                         0.810997\n",
+       "Sortino Ratio                        2.461927\n",
+       "Calmar Ratio                         2.180441\n",
+       "Max. Drawdown [%]                  -31.329297\n",
+       "Avg. Drawdown [%]                   -4.151761\n",
+       "Max. Drawdown Duration      316 days 21:00:00\n",
+       "Avg. Drawdown Duration       12 days 00:00:00\n",
+       "# Trades                                  158\n",
+       "Win Rate [%]                        36.708861\n",
        "Best Trade [%]                       7.058676\n",
-       "Worst Trade [%]                     -4.109217\n",
-       "Avg. Trade [%]                       0.519262\n",
-       "Max. Trade Duration          39 days 04:00:00\n",
-       "Avg. Trade Duration           8 days 14:00:00\n",
-       "Profit Factor                        1.708041\n",
-       "Expectancy [%]                         0.5469\n",
-       "SQN                                  3.015609\n",
-       "Kelly Criterion                      0.217785\n",
+       "Worst Trade [%]                     -3.749627\n",
+       "Avg. Trade [%]                       0.329256\n",
+       "Max. Trade Duration          36 days 00:00:00\n",
+       "Avg. Trade Duration           5 days 09:00:00\n",
+       "Profit Factor                        1.608128\n",
+       "Expectancy [%]                       0.347497\n",
+       "SQN                                   2.93138\n",
+       "Kelly Criterion                      0.178329\n",
        "_strategy                             MyStrat\n",
        "_equity_curve                             ...\n",
        "_trades                        Size  Entry...\n",
        "dtype: object"
       ]
      },
-     "execution_count": 285,
+     "execution_count": 300,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "stat, bt = backtest(\"^SPX\", atr_length=8, init_size=0.02 , tp_sl_ratio=2, slatr_coef=4)\n",
+    "stat, bt = backtest(\"^SPX\", atr_length=8, init_size=0.03 , tp_sl_ratio=1.5, slatr_coef=4)\n",
     "bt.plot()\n",
     "stat"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 281,
+   "execution_count": 304,
    "metadata": {},
    "outputs": [
     {
@@ -1707,7 +1707,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 281,
+     "execution_count": 304,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1727,9 +1727,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 239,
+   "execution_count": 288,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/var/folders/mb/tyl8xvh9689bgk14qr31lc7r0000gn/T/ipykernel_9219/3184709326.py:8: FutureWarning: Series.__getitem__ treating keys as positions is deprecated. In a future version, integer keys will always be treated as labels (consistent with DataFrame behavior). To access a value by position, use `ser.iloc[pos]`\n",
+      "  and df.MACD_HIST[row-1] < 0 and df.MACD_HIST[row] > 0\n",
+      "/var/folders/mb/tyl8xvh9689bgk14qr31lc7r0000gn/T/ipykernel_9219/3184709326.py:13: FutureWarning: Series.__getitem__ treating keys as positions is deprecated. In a future version, integer keys will always be treated as labels (consistent with DataFrame behavior). To access a value by position, use `ser.iloc[pos]`\n",
+      "  and df.MACD_HIST[row-1] > 0 and df.MACD_HIST[row] < 0\n",
+      "/var/folders/mb/tyl8xvh9689bgk14qr31lc7r0000gn/T/ipykernel_9219/3003789530.py:6: UserWarning: Pandas doesn't allow columns to be created via a new attribute name - see https://pandas.pydata.org/pandas-docs/stable/indexing.html#attribute-access\n",
+      "  df.RSI_14MA = df.RSI\n",
+      "/var/folders/mb/tyl8xvh9689bgk14qr31lc7r0000gn/T/ipykernel_9219/3003789530.py:13: FutureWarning: Series.__getitem__ treating keys as positions is deprecated. In a future version, integer keys will always be treated as labels (consistent with DataFrame behavior). To access a value by position, use `ser.iloc[pos]`\n",
+      "  and df.RSI[row] > 50\n",
+      "/var/folders/mb/tyl8xvh9689bgk14qr31lc7r0000gn/T/ipykernel_9219/3003789530.py:14: FutureWarning: Series.__getitem__ treating keys as positions is deprecated. In a future version, integer keys will always be treated as labels (consistent with DataFrame behavior). To access a value by position, use `ser.iloc[pos]`\n",
+      "  or (df.RSI[row]<25 and df.RSI[row-1]>25)\n",
+      "/var/folders/mb/tyl8xvh9689bgk14qr31lc7r0000gn/T/ipykernel_9219/3003789530.py:20: FutureWarning: Series.__getitem__ treating keys as positions is deprecated. In a future version, integer keys will always be treated as labels (consistent with DataFrame behavior). To access a value by position, use `ser.iloc[pos]`\n",
+      "  and df.RSI[row] < 55\n",
+      "/var/folders/mb/tyl8xvh9689bgk14qr31lc7r0000gn/T/ipykernel_9219/3003789530.py:21: FutureWarning: Series.__getitem__ treating keys as positions is deprecated. In a future version, integer keys will always be treated as labels (consistent with DataFrame behavior). To access a value by position, use `ser.iloc[pos]`\n",
+      "  or (df.RSI[row]>75 and df.RSI[row-1]<75)\n",
+      "/var/folders/mb/tyl8xvh9689bgk14qr31lc7r0000gn/T/ipykernel_9219/3560849306.py:3: FutureWarning: Series.__getitem__ treating keys as positions is deprecated. In a future version, integer keys will always be treated as labels (consistent with DataFrame behavior). To access a value by position, use `ser.iloc[pos]`\n",
+      "  df.MACDSignal[l]==1\n",
+      "/var/folders/mb/tyl8xvh9689bgk14qr31lc7r0000gn/T/ipykernel_9219/3560849306.py:8: FutureWarning: Series.__getitem__ treating keys as positions is deprecated. In a future version, integer keys will always be treated as labels (consistent with DataFrame behavior). To access a value by position, use `ser.iloc[pos]`\n",
+      "  df.MACDSignal[l]==-1\n",
+      "/var/folders/mb/tyl8xvh9689bgk14qr31lc7r0000gn/T/ipykernel_9219/3560849306.py:9: FutureWarning: Series.__getitem__ treating keys as positions is deprecated. In a future version, integer keys will always be treated as labels (consistent with DataFrame behavior). To access a value by position, use `ser.iloc[pos]`\n",
+      "  and df.RSI_Signal[l]==-1\n",
+      "/var/folders/mb/tyl8xvh9689bgk14qr31lc7r0000gn/T/ipykernel_9219/3560849306.py:4: FutureWarning: Series.__getitem__ treating keys as positions is deprecated. In a future version, integer keys will always be treated as labels (consistent with DataFrame behavior). To access a value by position, use `ser.iloc[pos]`\n",
+      "  and df.RSI_Signal[l]==1\n"
+     ]
+    },
     {
      "data": {
       "text/plain": [
@@ -2815,7 +2843,7 @@
        "  32.71028037383177]]"
       ]
      },
-     "execution_count": 239,
+     "execution_count": 288,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2864,7 +2892,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 240,
+   "execution_count": 289,
    "metadata": {},
    "outputs": [
     {
@@ -2890,7 +2918,7 @@
        "  43.53741496598639]}"
       ]
      },
-     "execution_count": 240,
+     "execution_count": 289,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2917,7 +2945,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 241,
+   "execution_count": 290,
    "metadata": {},
    "outputs": [
     {
@@ -2938,7 +2966,7 @@
        "Equity Final [$]                383124.781298\n",
        "Equity Peak [$]                 396626.663622\n",
        "Return [%]                         283.124781\n",
-       "Buy & Hold Return [%]               23.822047\n",
+       "Buy & Hold Return [%]               23.857585\n",
        "Return (Ann.) [%]                   61.626701\n",
        "Volatility (Ann.) [%]               74.798532\n",
        "Sharpe Ratio                         0.823903\n",
@@ -2965,7 +2993,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 241,
+     "execution_count": 290,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2978,7 +3006,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 242,
+   "execution_count": 305,
    "metadata": {},
    "outputs": [
     {
@@ -2993,18 +3021,18 @@
      "data": {
       "text/plain": [
        "Start                     2021-04-30 09:30:00\n",
-       "End                       2024-03-25 13:30:00\n",
-       "Duration                   1060 days 04:00:00\n",
-       "Exposure Time [%]                   83.795477\n",
-       "Equity Final [$]                785462.943848\n",
+       "End                       2024-03-25 14:30:00\n",
+       "Duration                   1060 days 05:00:00\n",
+       "Exposure Time [%]                   83.798663\n",
+       "Equity Final [$]                787306.205566\n",
        "Equity Peak [$]                  804194.38916\n",
-       "Return [%]                         685.462944\n",
-       "Buy & Hold Return [%]               31.331815\n",
-       "Return (Ann.) [%]                  103.904198\n",
-       "Volatility (Ann.) [%]              139.363324\n",
-       "Sharpe Ratio                         0.745563\n",
-       "Sortino Ratio                        2.649222\n",
-       "Calmar Ratio                          2.19079\n",
+       "Return [%]                         687.306206\n",
+       "Buy & Hold Return [%]               31.297349\n",
+       "Return (Ann.) [%]                  104.069481\n",
+       "Volatility (Ann.) [%]              139.473377\n",
+       "Sharpe Ratio                          0.74616\n",
+       "Sortino Ratio                         2.65348\n",
+       "Calmar Ratio                         2.194274\n",
        "Max. Drawdown [%]                  -47.427741\n",
        "Avg. Drawdown [%]                   -3.874711\n",
        "Max. Drawdown Duration      323 days 00:00:00\n",
@@ -3013,20 +3041,20 @@
        "Win Rate [%]                        45.882353\n",
        "Best Trade [%]                       21.26462\n",
        "Worst Trade [%]                     -9.698482\n",
-       "Avg. Trade [%]                       1.535169\n",
+       "Avg. Trade [%]                       1.537092\n",
        "Max. Trade Duration         231 days 00:00:00\n",
        "Avg. Trade Duration          21 days 17:00:00\n",
-       "Profit Factor                        2.572696\n",
-       "Expectancy [%]                       1.682026\n",
-       "SQN                                   2.73814\n",
-       "Kelly Criterion                       0.30388\n",
+       "Profit Factor                        2.574644\n",
+       "Expectancy [%]                       1.684109\n",
+       "SQN                                  2.739012\n",
+       "Kelly Criterion                      0.304155\n",
        "_strategy                             MyStrat\n",
        "_equity_curve                             ...\n",
        "_trades                       Size  EntryB...\n",
        "dtype: object"
       ]
      },
-     "execution_count": 242,
+     "execution_count": 305,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3046,7 +3074,68 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 280,
+   "execution_count": 248,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/var/folders/mb/tyl8xvh9689bgk14qr31lc7r0000gn/T/ipykernel_9219/41808923.py:2: UserWarning: Superimposed OHLC plot matches the original plot. Skipping.\n",
+      "  bt.plot(show_legend=False)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "Start                     2021-04-30 09:30:00\n",
+       "End                       2024-03-25 13:30:00\n",
+       "Duration                   1060 days 04:00:00\n",
+       "Exposure Time [%]                    69.79351\n",
+       "Equity Final [$]                535038.649414\n",
+       "Equity Peak [$]                 692238.485352\n",
+       "Return [%]                         435.038649\n",
+       "Buy & Hold Return [%]               31.331815\n",
+       "Return (Ann.) [%]                    78.56135\n",
+       "Volatility (Ann.) [%]                90.42001\n",
+       "Sharpe Ratio                         0.868849\n",
+       "Sortino Ratio                        2.772082\n",
+       "Calmar Ratio                         2.580232\n",
+       "Max. Drawdown [%]                  -30.447395\n",
+       "Avg. Drawdown [%]                    -2.86957\n",
+       "Max. Drawdown Duration      266 days 02:00:00\n",
+       "Avg. Drawdown Duration        8 days 12:00:00\n",
+       "# Trades                                  143\n",
+       "Win Rate [%]                        37.062937\n",
+       "Best Trade [%]                      13.674375\n",
+       "Worst Trade [%]                     -4.340308\n",
+       "Avg. Trade [%]                       0.795216\n",
+       "Max. Trade Duration          97 days 23:00:00\n",
+       "Avg. Trade Duration           8 days 03:00:00\n",
+       "Profit Factor                        2.069664\n",
+       "Expectancy [%]                       0.854606\n",
+       "SQN                                  1.696014\n",
+       "Kelly Criterion                      0.126982\n",
+       "_strategy                             MyStrat\n",
+       "_equity_curve                             ...\n",
+       "_trades                        Size  Entry...\n",
+       "dtype: object"
+      ]
+     },
+     "execution_count": 248,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "stat2, bt2 = backtest(\"^NDX\", atr_length=1, init_size=0.02 , tp_sl_ratio=2, slatr_coef=4)\n",
+    "bt.plot(show_legend=False)\n",
+    "stat2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 292,
    "metadata": {},
    "outputs": [
     {
@@ -3094,7 +3183,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 280,
+     "execution_count": 292,
      "metadata": {},
      "output_type": "execute_result"
     }
